--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ document.getElementById('input1')=0
 
 
 <p>L'équipe qui reçoit empoche la victoire dans 45% des cas tandis que l'équipe qui se déplace ne revient avec les trois points que dans 26% des cas. Cette avantage se traduit de manière nette lorsque l'on s'intéresse au nombre de point que les équipes obtienne en moyenne chaque saison. Les équipes glanent 60% de leurs points dans leur stade.
-<div id="points" style="width: 400px; height: 310px; margin: 0 auto"></div>
+<div id="points" style="width: 350px; height: 400px; margin: 0 auto"></div>
 
 <p>&nbsp;</p>
 <h3>Des facilités à retourner une siuation mal embarquée</h3>
 <p>Une équipe évoluant chez elle peut aller chercher des ressources mentales lui permettant de retourner des situations mal embarquées qui sont plus difficiles de mobiliser lorsqu'elle joue à l'extérieur. Chaque saison, 77 équipes réussisent à sortir vainqueur d'une rencontre alors qu'il ne poosédait virtuellement qu'un point à la mi-temps. 45 de ces équipes jouaient à domiciles. Fait plus rare, 11 équipes sortent vaiqueurs du match alorss qu'elles étaient menées à la mi-temps. Dans 52% des cas, cette équipe évoluait à domicile.</p>
 
 
-<div id="bubblea" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="retournement" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
 
 
